# draft

./: .gitignore  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh
.github/workflows/: release-readiness.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  output.rs  service.rs
cli/src/commands/: commit.rs  mod.rs  review.rs  start.rs  status.rs  undo.rs  verify.rs
cli/tests/: git_e2e.rs  smoke.rs  undo_nested_repo.rs
core/: Cargo.toml
core/benches/: bench.rs
core/src/: adapters.rs  app.rs  change_grouper.rs  checkpoint_engine.rs  commit_engine.rs  common.rs  composition.rs  config.rs  conflict_engine.rs  diff_analyzer.rs  error.rs  errors.rs  event.rs  fsutil.rs  gc.rs  git_adapter.rs  hashing.rs  hidden.rs  home.rs  identity_manager.rs  importexport.rs  index.rs  layout.rs  ledger.rs  lib.rs  lock.rs  lsif.rs  models.rs  pathguard.rs  policy.rs  receipt.rs  receipt_engine.rs  repo_detector.rs  risk_engine.rs  riskv2.rs  signing.rs  stable.rs  storage.rs  tests_engines.rs  tests_foundation.rs  (+4 more)
core/src/app/: mod.rs  reports.rs
core/src/changes/: grouping.rs  mod.rs  store.rs
core/src/checkpoint/: mod.rs
core/src/conflict/: mod.rs
core/src/finalization/: mod.rs  policy.rs
core/src/identity/: actor.rs  global.rs  local.rs  mod.rs  provider_mapping.rs
core/src/migration/: mod.rs
core/src/operations/: integrity.rs  mod.rs  types.rs
core/src/pack/: mod.rs
core/src/receipts/: mod.rs
core/src/review/: mod.rs
core/src/risk/: mod.rs
core/src/vcs/: capabilities.rs  detection.rs  errors.rs  experimental.rs  mod.rs  registry.rs  testing.rs  traits.rs  types.rs
core/src/verification/: mod.rs
core/src/workspace/: config.rs  detection.rs  init.rs  layout.rs  metadata.rs  mod.rs
core/tests/: core_tests.rs  security_fixtures.rs  test.rs
docs/: CHECKPOINT_MODEL.md  COMMANDS.md  LIMITATIONS.md  README.md  RECEIPT_MODEL.md  SAFETY.md  STORAGE.md  TUI.md  agent-workflows.md  architecture.md  candidates-and-tasks.md  change-model.md  changepack.md  checkpointing.md  checkpoints.md  cli.md  collaboration.md  command-reference.md  compare-compose.md  concepts.md  config-rules.md  config.md  configuration.md  conflict-handling.md  draft-only-workflows.md  event-model.md  evidence.md  faq.md  finalization.md  getting-started.md  git-provider.md  git-workflows.md  hooks.md  identity.md  ignore-rules.md  installation.md  operation-log.md  overview.md  policy.md  protocol.md  (+17 more)
docs/adr/: 0001-provider-neutral-core.md  0002-finalization-not-commit.md  0003-draft-event-log.md  0003-draft-operation-log.md  0004-services-draftd-boundary.md  0005-git-as-first-provider.md
docs/notes/: remote-target.md
examples/: config.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: adapter_message.rs  agui_request.rs  diff_parser.rs  draftpack_reader.rs  event_parser.rs  import_parser.rs  manifest_parser.rs  path_sanitizer.rs  receipt_parser.rs  rollback_resolver.rs
proto/schemas/: changepack.schema.json  composition.schema.json  config.schema.json  event.schema.json  project-state.schema.json  receipt.schema.json  stable-head.schema.json  verification.schema.json
proto/specs/: canonicalization.md  changepack.md  close.md  compatibility.md  composition.md  event-ledger.md  future-drafthub-readiness.md  gc.md  import-export.md  path-safety.md  project-state.md  receipt.md  rollback.md  save-finalization.md  signing.md  stability.md
proto/test-vectors/close-clean-repo/: vector.json
proto/test-vectors/close-with-pending-pack/: vector.json
proto/test-vectors/conflicting-packs/: vector.json
proto/test-vectors/dependent-packs/: vector.json
proto/test-vectors/gc-disposed-pack-cleanup/: vector.json
proto/test-vectors/independent-packs/: vector.json
proto/test-vectors/invalid-signature/: vector.json
proto/test-vectors/save-dispose-only/: vector.json
proto/test-vectors/save-merge-and-dispose/: vector.json
proto/test-vectors/stable-composition/: vector.json
proto/test-vectors/tampered-receipt/: vector.json
proto/test-vectors/unstable-composition/: vector.json
proto/test-vectors/valid-pack/: vector.json
providers/fs/: Cargo.toml
providers/fs/src/: lib.rs
providers/git/: Cargo.toml
providers/git/src/: capabilities.rs  checkpoint.rs  command.rs  conflicts.rs  detection.rs  diff.rs  finalization.rs  lib.rs  parse.rs  repository.rs  status.rs
providers/git/tests/: git_provider.rs
providers/jj/: Cargo.toml
providers/jj/src/: lib.rs
providers/mercurial/: Cargo.toml
providers/mercurial/src/: lib.rs
providers/pijul/: Cargo.toml
providers/pijul/src/: lib.rs
providers/registry/: Cargo.toml
providers/registry/src/: lib.rs
providers/registry/tests/: contract.rs
scripts/: package-release.sh  validate-version.sh
services/adapters/: Cargo.toml
services/adapters/src/: a2a.rs  acp.rs  lib.rs  mcp.rs
services/agui/: Cargo.toml
services/agui/src/: index.html  lib.rs
services/draftd/: Cargo.toml
services/draftd/src/: lib.rs  main.rs
services/draftd/tests/: service.rs
services/ipc/: Cargo.toml
services/ipc/src/: lib.rs  protocol.rs
services/locks/: Cargo.toml
services/locks/src/: lib.rs
services/locks/tests/: locks.rs
services/sessions/: Cargo.toml
services/sessions/src/: lib.rs
services/store/: Cargo.toml
services/store/src/: lib.rs
services/sync/: Cargo.toml
services/sync/src/: lib.rs
services/watcher/: Cargo.toml
services/watcher/src/: lib.rs
services/watcher/tests/: watcher.rs
tui/: Cargo.toml
tui/src/: actions.rs  app.rs  lib.rs  state.rs
tui/src/screens/: commit.rs  diff.rs  mod.rs  review.rs  verify.rs
tui/src/widgets/: change_list.rs  diff_view.rs  evidence_panel.rs  mod.rs  risk_badge.rs
