[workspace]
members = [
    "core",
    "providers/git",
    "providers/fs",
    "providers/jj",
    "providers/mercurial",
    "providers/pijul",
    "providers/registry",
    "services/ipc",
    "services/store",
    "services/locks",
    "services/sessions",
    "services/sync",
    "services/watcher",
    "services/draftd",
    "cli",
    "tui"
]
resolver = "2"
