[package]
name = "draft-cli"
version = "0.1.0"
edition = "2021"
default-run = "draft"

[[bin]]
name = "draft"
path = "src/main.rs"

[dependencies]
draft-core = { path = "../core" }
draft-tui = { path = "../tui" }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
