[package]
name = "draft-cli"
version = "0.2.0"
edition = "2021"
default-run = "draft"

[[bin]]
name = "draft"
path = "src/main.rs"

[dependencies]
draft-core = { path = "../core" }
draft-providers = { path = "../providers/registry" }
draft-ipc = { path = "../services/ipc" }
draft-tui = { path = "../tui" }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
predicates = "3.0"
serde_json = "1.0"
