[package]
name = "draft-cli"
version = "0.3.2"
edition = "2021"
default-run = "draft"

[[bin]]
name = "draft"
path = "src/main.rs"

[dependencies]
draft-core = { path = "../core" }
draft-ipc = { path = "../services/ipc" }
draft-tui = { path = "../tui" }
draft-agui = { path = "../services/agui" }
draft-adapters = { path = "../services/adapters" }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
predicates = "3.0"
serde_json = "1.0"
