[package]
name = "draft-core"
version = "0.2.0"
edition = "2021"

[features]
# Exposes the in-memory fake provider and test helpers to downstream crates
# (used by provider-contract tests).
testing = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2.4"
ignore = "0.4"
tempfile = "3.8" # also needed for some core testing/ops if required, keeping it here
