[package]
name = "draft-providers"
version = "0.2.0"
edition = "2021"

[dependencies]
draft-core = { path = "../../core" }
draft-provider-git = { path = "../git" }
draft-provider-fs = { path = "../fs" }
draft-provider-jj = { path = "../jj" }
draft-provider-mercurial = { path = "../mercurial" }
draft-provider-pijul = { path = "../pijul" }

[dev-dependencies]
tempfile = "3.8"
