[package]
name = "draft-agui"
version = "0.3.2"
edition = "2021"

[dependencies]
draft-core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit"] }
rand = "0.8"
