[package]
name = "draftd"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "draftd"
path = "src/main.rs"

[dependencies]
draft-core = { path = "../../core" }
draft-ipc = { path = "../ipc" }
draft-store = { path = "../store" }
draft-sessions = { path = "../sessions" }
draft-watcher = { path = "../watcher" }
draft-locks = { path = "../locks" }
draft-sync = { path = "../sync" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
